ConnexoProject/force-app/main/default/objects/Affected_Equipment__c/Affected_Equipment__c.object-meta.xml
<CustomObject>
    <label>Affected Equipment</label>
    <nameField>
        <displayFormat>EQT-{0000}</displayFormat>
        <label>Affected Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>