ConnexoProject/force-app/main/default/objects/Affected_Equipment__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Affected Equipment</relationshipLabel>
    <relationshipName>Affected_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>