ConnexoProject/force-app/main/default/objects/Affected_Equipment__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <inlineHelpText>Equipment Description custom field</inlineHelpText>
    <label>Equipment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>