ConnexoProject/force-app/main/default/objects/Affected_Equipment__c/fields/Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID__c</fullName>
    <label>Equipment ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>