ConnexoProject/force-app/main/default/objects/Affected_Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>