ConnexoProject/force-app/main/default/objects/Affected_Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Description__c</columns>
    <columns>Equipment_ID__c</columns>
    <columns>Equipment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>